--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,11 @@ Date: 2015-10-31
 Title: Who Are You? Bayesian Prediction of Racial Category Using Surname and Geolocation
 Author: Kabir Khanna [aut, cre], Kosuke Imai [aut, cre]
 Maintainer: Kabir Khanna <kkhanna@princeton.edu>
+Description: This open-source software package enables researchers to predict individual ethnicity using his/her surname, geolocation, and other attributes such as gender and age. The method utilizes the Bayes' rule to compute the posterior probability of each racial category for any given individual voter. The package implements methods described in Imai and Khanna (2015) "Improving Ecological Inference by Predicting Individual Ethnicity from Voter Registration Records."
 Depends:
     R (>= 3.2.0),
-    utils,
-    UScensus2010
+    utils
 Imports:
-    UScensus2010
 Suggests:
 VignetteBuilder: 
 Description: 
