--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Description: This open-source software package enables researchers to predict
     The package implements methods described in Imai and Khanna (2015) "Improving
     Ecological Inference by Predicting Individual Ethnicity from Voter Registration
     Records."
+URL: https://github.com/kosukeimai/wru
+BugReports: https://github.com/kosukeimai/wru/issues
 Depends:
     R (>= 3.2.0),
     utils
