--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 # Sample .travis.yml for R projects
 
 language: r
-warnings_are_errors: false
+cache: packages
 sudo: required
-
-env:
- global:
-   - CRAN: http://cran.rstudio.com
 
 notifications:
   email:
