(1) Sync with the newest WRU code which has race.pred at county level. (2) getStateCensusData to getCensusData; and input argument censusData to census.data (to distinguish it from the function censusData)
tbl <- read.csv("../example/FL-Oct2014-00-00-00.tsv", sep="\t",
header=TRUE, stringsAsFactors = FALSE, colClasses = "character")
tbl$age <- as.numeric(tbl$age)
tbl$sex <- ifelse(tbl$sex == "M", 0, 1)
tbl$party <- ifelse(tbl$party == "Republican", 2, tbl$party)
tbl$party <- ifelse(tbl$party == "Democratic", 1, tbl$party)
tbl$party <- ifelse((tbl$party == "1") | (tbl$party == "2"), tbl$party,
0)

y <- getCensusData("...", state = "FL", demo = FALSE)
yyy <- getCensusData("...", state = c("DE", "NJ"), demo = FALSE)
yy <- yyy
yy[["FL"]] <- y[["FL"]]

names(y)
[1] "FL"
names(yy)
[1] "NJ" "DE" "FL"
names(yyy)
[1] "DE" "NJ"
x1 <- race.pred(voters = tbl, name.clean = TRUE, census = "tract",
census.key = "...", census.data = y, demo = FALSE)
x2 <- race.pred(voters = tbl, name.clean = TRUE, census = "tract",
census.key = "...", demo = FALSE)
x3 <- race.pred(voters = tbl, name.clean = TRUE, census = "tract",
census.key = "...", census.data = yy, demo = FALSE)
x4 <- race.pred(voters = tbl, name.clean = TRUE, census = "tract",
census.key = "...", census.data = yyy, demo = FALSE)

x1 <- race.pred(voters = tbl, name.clean = TRUE, census = "block",
census.key = "...", census.data = y, demo = FALSE)
x2 <- race.pred(voters = tbl, name.clean = TRUE, census = "block",
census.key = "...", demo = FALSE)
x3 <- race.pred(voters = tbl, name.clean = TRUE, census = "block",
census.key = "...", census.data = yy, demo = FALSE)
x4 <- race.pred(voters = tbl, name.clean = TRUE, census = "block",
census.key = "...", census.data = yyy, demo = FALSE)

x <- x1
sum(x != x2, na.rm=T)
sum(x == x2, na.rm=T)
sum(is.na(x) == is.na(x2), na.rm=T)
sum(is.na(x) != is.na(x2), na.rm=T)

sum(x != x2, na.rm=T)
[1] 0
sum(x == x2, na.rm=T)
[1] 149188
sum(is.na(x) == is.na(x2), na.rm=T)
[1] 157500
sum(is.na(x) != is.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(census.helper.api.online)
 export(censusData)
 export(getCensusApi)
 export(getCensusApi2)
-export(getStateCensusData)
+export(getCensusData)
 export(name.clean)
 export(race.pred)
 export(vecToChunk)
