--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: wru
-Version: 0.0-1
-Date: 2015-12-7
+Version: 0.1-1
+Date: 2016-12-12
 Title: Who Are You? Bayesian Prediction of Racial Category Using Surname and
     Geolocation
 Author: Kabir Khanna [aut, cre], Kosuke Imai [aut, cre]
@@ -11,7 +11,7 @@ Description: This open-source software package enables researchers to predict
     posterior probability of each racial category for any given individual voter.
     The package implements methods described in Imai and Khanna (2015) "Improving
     Ecological Inference by Predicting Individual Ethnicity from Voter Registration
-    Records."
+    Records" <DOI:10.1093/pan/mpw001>.
 URL: https://github.com/kosukeimai/wru
 BugReports: https://github.com/kosukeimai/wru/issues
 Depends:
