Add census.year as input, enhance the input consistency, and updated README.Md

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 export(census.helper.api)
 export(census.helper.api.local)
 export(census.helper.api.online)
+export(census.surname)
 export(censusData)
 export(getCensusApi)
 export(getCensusApi2)
 export(getCensusData)
-export(name.clean)
 export(race.pred)
 export(vecToChunk)
 import(devtools)
