Predicts Race based on Place Level Demographics

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: wru
+Package: wruWITHplace
 Version: 0.1-5
 Date: 2017-6-8
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
