--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: wru
 Version: 0.1-8
-Date: 2019-2-10
+Date: 2019-2-12
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
     Geolocation
 Authors@R: c(
-  person("Kabir", "Khanna", email = "kkhanna@princeton.edu", role = c("aut", "cre")),
+  person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut", "cre")),
   person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut"))
   )
 Maintainer: Kabir Khanna <kabirkhanna@gmail.com>
