--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,5 @@ export(merge_surnames)
 export(predict_race)
 export(vec_to_chunk)
 import(devtools)
+importFrom(Rcpp,evalCpp)
+useDynLib(wru, .registration=TRUE)
