--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: wru
-Version: 0.1-10
-Date: 2020-10-08
+Version: 0.1-12
+Date: 2021-05-17
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
     Geolocation
 Authors@R: c(
   person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut", "cre")),
   person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut"))
   )
+Maintainer: Kabir Khanna <kabirkhanna@gmail.com>
 Description: Predicts individual race/ethnicity using surname, geolocation,
     and other attributes, such as gender and age. The method utilizes the Bayes'
     Rule to compute the posterior probability of each racial category for any given
-    individual. The package implements methods described in Imai and Khanna (2015)
+    individual. The package implements methods described in Imai and Khanna (2016)
     "Improving Ecological Inference by Predicting Individual Ethnicity from Voter
-    Registration Records" <DOI:10.1093/pan/mpw001>.
+    Registration Records" Political Analsyis <DOI:10.1093/pan/mpw001>.
 URL: https://github.com/kosukeimai/wru
 BugReports: https://github.com/kosukeimai/wru/issues
 Depends:
@@ -24,5 +25,6 @@ Suggests:
     testthat
 LazyLoad: yes
 LazyData: yes
+LazyDataCompression: xz
 License: GPL (>= 3)
 RoxygenNote: 7.1.1
