--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(census_geo_api)
 export(census_helper)
+export(census_helper_new)
 export(get_census_api)
 export(get_census_api_2)
 export(get_census_data)
+export(merge_names)
 export(merge_surnames)
 export(predict_race)
+export(predict_race_new)
 export(vec_to_chunk)
 import(devtools)
