--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
     Geolocation
 Authors@R: c(
   person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut", "cre")),
-  person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut")),
-  person("Santiago", "Olivella", email = "olivella@unc.edu", role = c("aut"))
+  person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut"))
   )
 Description: Predicts individual race/ethnicity using surname, geolocation,
     and other attributes, such as gender and age. The method utilizes the Bayes'
@@ -17,19 +16,18 @@ Description: Predicts individual race/ethnicity using surname, geolocation,
 URL: https://github.com/kosukeimai/wru
 BugReports: https://github.com/kosukeimai/wru/issues
 Depends:
-    R (>= 4.0.0),
+    R (>= 3.5.0),
     utils
 Imports:
     devtools (>= 1.10.0)
-Suggests:
-    testthat
 LinkingTo: 
     Rcpp,
     RcppEigen,
     RcppProgress
+Suggests:
+    testthat
 LazyLoad: yes
 LazyData: yes
 LazyDataCompression: xz
 License: GPL (>= 3)
-RoxygenNote: 7.1.1
-Encoding: UTF-8
+RoxygenNote: 7.1.1.9001
