--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(predict_race)
 export(predict_race_new)
 export(vec_to_chunk)
 import(devtools)
+import(stringr)
 importFrom(Rcpp,evalCpp)
 useDynLib(wru, .registration=TRUE)
