--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(census_geo_api)
 export(census_helper)
 export(census_helper_new)
 export(co_cluster)
+export(format_legacy_data)
 export(get_census_api)
 export(get_census_api_2)
 export(get_census_data)
@@ -12,6 +13,7 @@ export(merge_surnames)
 export(predict_race)
 export(predict_race_new)
 export(vec_to_chunk)
+import(PL94171)
 import(devtools)
 import(stringr)
 importFrom(Rcpp,evalCpp)
