--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,6 @@ import(PL94171)
 import(devtools)
 import(stringr)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,.data)
+importFrom(dplyr,`%>%`)
 useDynLib(wru, .registration=TRUE)
