--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(predict_race_new)
 export(vec_to_chunk)
 import(devtools)
 import(stringr)
+import(dplyr)
 importFrom(Rcpp,evalCpp)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
