reflect name change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(get_census_data)
 export(merge_names)
 export(merge_surnames)
 export(predict_race)
-export(predict_race_hwru)
+export(predict_race_me)
 export(predict_race_new)
 export(vec_to_chunk)
 import(devtools)
