--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ import(stringr)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,.data)
 importFrom(dplyr,`%>%`)
+importFrom(furrr,future_map_dfr)
 useDynLib(wru, .registration=TRUE)
