--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(Rcpp,evalCpp)
 importFrom(dplyr,.data)
 importFrom(dplyr,`%>%`)
 importFrom(furrr,future_map_dfr)
+importFrom(purrr,map_dfr)
 useDynLib(wru, .registration=TRUE)
