--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: wru
-Version: 0.1-13.9001
+Version: 0.2-0.9001
 Date: 2021-11-11
-Title: Who are You? Bayesian Prediction of Racial Category Using Surname and
+Title: Who are You? Bayesian Prediction of Racial Category Using Surname, First Name, Middle Name, and
     Geolocation
 Authors@R: c(
   person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut", "cre")),
@@ -9,23 +9,22 @@ Authors@R: c(
   person("Evan", "Rosenman", email = "etrrosenman@gmail.com", role = c("aut")),
   person("Santiago", "Olivella", email = "olivella@unc.edu", role = c("aut"))
   )
-Description: Predicts individual race/ethnicity using surname, geolocation,
-    and other attributes, such as gender and age. The method utilizes the Bayes'
-    Rule to compute the posterior probability of each racial category for any given
+Description: Predicts individual race/ethnicity using surname, first name, middle name, geolocation,
+    and other attributes, such as gender and age. The method utilizes Bayes'
+    Rule (with optional measurement error correction) to compute the posterior probability of each racial category for any given
     individual. The package implements methods described in Imai and Khanna (2016)
     "Improving Ecological Inference by Predicting Individual Ethnicity from Voter
     Registration Records" Political Analysis <DOI:10.1093/pan/mpw001>.
 URL: https://github.com/kosukeimai/wru
 BugReports: https://github.com/kosukeimai/wru/issues
 Depends:
-    R (>= 4.0.0),
+    R (>= 4.1.0),
     utils
 Imports:
     foreach (>= 1.5.1),
     devtools (>= 1.10.0),
     stringr,
-    dplyr,
-    Rcpp
+    dplyr
 Suggests:
     testthat,
     wruData (>= 0.0.1),
