--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,20 +3,16 @@
 export(census_geo_api)
 export(census_helper)
 export(census_helper_new)
+export(format_legacy_data)
 export(get_census_api)
 export(get_census_api_2)
 export(get_census_data)
 export(merge_names)
 export(merge_surnames)
 export(predict_race)
-export(predict_race_me)
-export(predict_race_new)
 export(vec_to_chunk)
+import(PL94171)
 import(devtools)
 import(stringr)
-import(dplyr)
 importFrom(Rcpp,evalCpp)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
-importFrom(foreach,getDoParWorkers)
 useDynLib(wru, .registration=TRUE)
