--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,7 @@ import(PL94171)
 import(devtools)
 import(stringr)
 importFrom(Rcpp,evalCpp)
+importFrom(furrr,future_map_dfr)
+importFrom(piggyback,pb_download)
+importFrom(purrr,map_dfr)
 useDynLib(wru, .registration=TRUE)
