--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,7 +32,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@v1
+      # - uses: r-lib/actions/setup-pandoc@v1 # not used in this flow
 
       - uses: r-lib/actions/setup-r@v1
         with:
