Further fixes for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,4 +18,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(furrr,future_map_dfr)
 importFrom(piggyback,pb_download)
 importFrom(purrr,map_dfr)
+importFrom(stats,rmultinom)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(wru, .registration=TRUE)
