--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: wru
-Version: 0.2-0.9001
+Version: 0.2-0.9002
 Date: 2021-11-11
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname, First Name, Middle Name, and
     Geolocation
 Authors@R: c(
-  person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut", "cre")),
-  person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut")),
+  person("Kabir", "Khanna", email = "kabirkhanna@gmail.com", role = c("aut")),
+  person("Brandon", "Bertelsen", email = "brandon@bertelsen.ca", role = c("aut","cre")),
+  person("Santiago", "Olivella", email = "olivella@unc.edu", role = c("aut")),
   person("Evan", "Rosenman", email = "etrrosenman@gmail.com", role = c("aut")),
-  person("Santiago", "Olivella", email = "olivella@unc.edu", role = c("aut"))
+  person("Kosuke", "Imai", email = "imai@harvard.edu", role = c("aut"))
   )
 Description: Predicts individual race/ethnicity using surname, first name, middle name, geolocation,
     and other attributes, such as gender and age. The method utilizes Bayes'
@@ -21,13 +22,11 @@ Depends:
     R (>= 4.1.0),
     utils
 Imports:
-    devtools (>= 1.10.0),
     dplyr,
     future,
     furrr,
     purrr,
     Rcpp,
-    stringr,
     piggyback, 
     PL94171
 Suggests:
@@ -40,6 +39,6 @@ LazyLoad: yes
 LazyData: yes
 LazyDataCompression: xz
 License: GPL (>= 3)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Encoding: UTF-8
 Config/testthat/edition: 3
