Changelog + DESCRIPTION update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: wru
-Version: 0.2-0.9002
+Version: 1.0.0
 Date: 2021-11-11
 Title: Who are You? Bayesian Prediction of Racial Category Using Surname, First Name, Middle Name, and
     Geolocation
