--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(predict_race)
 import(PL94171)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,coalesce)
+importFrom(dplyr,pull)
 importFrom(furrr,future_map_dfr)
 importFrom(piggyback,pb_download)
 importFrom(purrr,map_dfr)
