fix(validate_key): if `key` is `NULL`, replace it with `Sys.getenv("CENSUS_API_KEY")` for backwards compatibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(dplyr,pull)
 importFrom(furrr,future_map_dfr)
 importFrom(piggyback,pb_download)
 importFrom(purrr,map_dfr)
+importFrom(rlang,"%||%")
 importFrom(stats,rmultinom)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
