--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(PL94171)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,pull)
+importFrom(stringr, str_glue)
 importFrom(furrr,future_map_dfr)
 importFrom(piggyback,pb_download)
 importFrom(purrr,map_dfr)
