--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
     person("Brandon", "Bertelsen", , "brandon@bertelsen.ca", role = c("aut", "cre")),
     person("Santiago", "Olivella", , "olivella@unc.edu", role = "aut"),
     person("Evan", "Rosenman", , "etrrosenman@gmail.com", role = "aut"),
-    person("Alex", "Rossell Hayes", , "alexander@rossellhayes.com", role = "aut"),
+    person("Alexander", "Rossell Hayes", , "alexander@rossellhayes.com", role = "aut"),
     person("Kosuke", "Imai", , "imai@harvard.edu", role = "aut")
   )
 Description: Predicts individual race/ethnicity using surname, first name,
